# analyst

./: .env.example  .gitignore  README.md  docker-compose.yml  logging.ini  pyproject.toml  server.py  start_dev.sh
analyst/: __main__.py  helpers.py  screener.py  server.py  task_base.py  web_api.py
analyst/algo/: example.py  filter.py  plot.py  preprocess.py
analyst/static/: screener_stock_data.css
analyst/templates/: index.html  screener_charts.html  screener_stock_data.html  screener_tasks_list.html
client/src/: display_chart.ts  package.json
mount/mongo/initdb/: createuser.sh
templates/: screener_stock_data.html
tests/: conftest.py  test_helpers.py  test_screener.py  test_server.py  test_task_base.py  test_web_api.py
tests/fixtures/: stock_snapshot.json
