[tool.poetry]
name = "analyst"
version = "0.1.0"
description = "A personal, experimental financial analysis tool."
authors = ["sfjt"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pymongo = "^4.5.0"
python-dotenv = "^1.0.0"
flask = "^2.3.3"
flask-pymongo = "^2.3.0"
pandas = "2.1.0"
mplfinance = "^0.12.10b0"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
black = "^23.9.1"
pytest = "^7.4.2"
pytest-dotenv = "^0.5.2"
mongomock = "^4.1.2"
pytest-mock = "^3.11.1"
jupyterlab = "^4.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = '\.venv|\.pytest_cache|\.ipynb_checkpoints|client'
